# bookstore-django

./: Dockerfile  README.md  anotacoes.txt  conftest.py  docker-compose.yml  env.dev  pyproject.toml
bookstore/: settings.py  urls.py  views.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/viewsets/: order_viewsets.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/viewsets/: __init__.py  category_viewsets.py  product_viewsets.py
tests/test_serializer/: test_category.py  test_order.py  test_product.py
tests/test_viewsets/: test_category_viewset.py  test_order_viewset copy.py  test_product_viewset.py
