[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "bookstore-api"
authors = ["Lukas Frick <contatolukasfrick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=5.2.5,<6.0.0"
djangorestframework = ">=3.16.1,<4.0.0"
django-rest-framework = ">=0.1.0,<0.2.0"
pytest = ">=8.4.1,<9.0.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=6.0.0,<7.0.0"
psycopg2-binary = "^2.9.10"
make = "^0.1.6.post2"
whitenoise = "^6.10.0"
gunicorn = "^23.0.0"
gitpython = "^3.1.45"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
